<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registra_medicao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ticiane.diabetessimples.RegistraMedicaoActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:gravity="center" >
        <Button
            android:id="@+id/btnNova"
            android:text="@string/btnNova"
            android:onClick="novaMedicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnListar"
            android:text="@string/btnListar"
            android:onClick="listarMedicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnCofigurar"
            android:text="@string/btnConfigurar"
            android:onClick="configurar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <View
            android:id="@+id/vi_hline_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/btnDataMedia"
            android:text="@string/btnDataMedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/lblDataMedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbTipoMedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoMedida" />
        <Spinner
            android:id="@+id/spiTipoMedida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbTipoRefeicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoRefeicao" />
        <Spinner
            android:id="@+id/spiTipoRefeicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lblValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblValor" />

        <EditText
            android:id="@+id/txtValor"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:gravity="center" >
        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/btnRegistrar"
            android:onClick="registrarMedicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lblStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblStatus" />
    </LinearLayout>

</LinearLayout >
